--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <p>Episodio 2 - 31 minutos: se aborda un tema bastante inusual que es una recopilación de las mejores canciones de 31 minutos y también las peores.</p>
 
   <a href="https://youtu.be/SJXbUhw9Qac?si=bxpwWclsR18UUGts"><img src="p4.jpg" width="100px" alt="Episodio 3"></a>
-    <p>Episodio 3 - Melodías Malditas<br>En este capitulo habalremos de las canciones que son consideradas por puchos como muy tenebrosas</p>
+    <p>Episodio 3 - Melodías Malditas<br>En este capitulo hablaremos de las canciones que son consideradas por muchos como muy tenebrosas</p>
 <a href="https://open.spotify.com/episode/6bzJwV76GNO2hAdrrIpTiV?si=834a1e062d394a42"><img src="p4.jpg" width="100px" alt="Episodio 3"></a>
     <p>Episodio 3 - Melodías Malditas<br>Version de Espotify</p>
 
